--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://UDAY1602.github.io/HELOMANTRA",
+  "homepage": "https://UDAY1602.github.io/HEALOMANTRA",
   "name": "healomantra",
   "private": true,
   "version": "0.0.0",
